STOR-1140: moving the margin to the taxMessage container to fix alignment

--- a/public/less/_pdp.less
+++ b/public/less/_pdp.less
@@ -36,6 +36,9 @@
 
     .price{
       font-size: 39px;
+    }
+    
+    .taxMessage{
       margin: 0 0 20px 0;
     }
 
